# DZ_bank

./: .env.example  .gitignore  README.md  main.py  mylog.txt  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: bank_operations.py  decorators.py  external_api.py  generators.py  masks.py  mylog.txt  process_bank.py  processing.py  read_csv.py  read_file.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_bank_operations.py  test_card_number.py  test_decorators.py  test_external_api.py  test_generators.py  test_log.txt  test_main.py  test_masks.py  test_process_bank.py  test_processing.py  test_read_file.py  test_utils.py  test_widget.py
